added homepage attribute in package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "arcdevelopment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mail2bishnoi.github.io/arcsoftware",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
